// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component arrow direction - bottom 1`] = `
<Dropdown
  active={false}
  className=""
  direction="bottom"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="bottom"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        TEST
        <DropdownIcon
          className=""
          direction="bottom"
          disabledClassName=""
          isDisabled={false}
        >
          <DownIcon
            className="icon"
          >
            <svg
              className="icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 11l-3.009 3.004L9 11"
                fill="none"
                fillRule="evenodd"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="1"
              />
            </svg>
          </DownIcon>
        </DropdownIcon>
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component arrow direction - bottom_left 1`] = `
<Dropdown
  active={false}
  className=""
  direction="bottom_left"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="bottom_left"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        TEST
        <DropdownIcon
          className=""
          direction="bottom_left"
          disabledClassName=""
          isDisabled={false}
        >
          <DownIcon
            className="icon"
          >
            <svg
              className="icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 11l-3.009 3.004L9 11"
                fill="none"
                fillRule="evenodd"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="1"
              />
            </svg>
          </DownIcon>
        </DropdownIcon>
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component arrow direction - left 1`] = `
<Dropdown
  active={false}
  className=""
  direction="left"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="left"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        <DropdownIcon
          className=""
          direction="left"
          disabledClassName=""
          isDisabled={false}
        >
          <LeftIcon
            className="icon"
          >
            <svg
              className="icon"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 8l-4 4 4 4"
                fill="none"
                fillRule="evenodd"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="1"
              />
            </svg>
          </LeftIcon>
        </DropdownIcon>
        TEST
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component arrow direction - right 1`] = `
<Dropdown
  active={false}
  className=""
  direction="right"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="right"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        TEST
        <DropdownIcon
          className=""
          direction="right"
          disabledClassName=""
          isDisabled={false}
        >
          <RightIcon
            className="icon"
          >
            <svg
              className="icon"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 8l4 4-4 4"
                fill="none"
                fillRule="evenodd"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="1"
              />
            </svg>
          </RightIcon>
        </DropdownIcon>
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component arrow direction - unknown 1`] = `
<Dropdown
  active={false}
  className=""
  direction="TEST"
  disabledClassName=""
  iconClassName=""
  isDisabled={false}
  itemsClassName=""
  label="TEST"
>
  <div
    className="dropdown"
    onClick={[Function]}
  >
    <DropdownTitle
      className=""
      direction="TEST"
      disabledClassName=""
      iconClassName=""
      isDisabled={false}
    >
      <span
        className="dropdown_title"
      >
        TEST
        <DropdownIcon
          className=""
          direction="TEST"
          disabledClassName=""
          isDisabled={false}
        >
          <DownIcon
            className="icon"
          >
            <svg
              className="icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 11l-3.009 3.004L9 11"
                fill="none"
                fillRule="evenodd"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="1"
              />
            </svg>
          </DownIcon>
        </DropdownIcon>
      </span>
    </DropdownTitle>
  </div>
</Dropdown>
`;

exports[`Dropdown component default snapshot 1`] = `
<div
  className="dropdown"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    
    <svg
      className="icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 11l-3.009 3.004L9 11"
        fill="none"
        fillRule="evenodd"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown component snapshot with active 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Dropdown
    active={true}
    className=""
    disabledClassName=""
    iconClassName=""
    isDisabled={false}
    itemsClassName=""
    label=""
  >
    <div>
      item 1
    </div>
    <div>
      item 2
    </div>
  </Dropdown>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <DropdownTitle
          className=""
          direction="bottom"
          disabledClassName=""
          iconClassName=""
          isDisabled={false}
        >
          
        </DropdownTitle>,
        <div
          className="dropdown_items dropdown_items_bottom"
        >
          <div
            active={false}
            onMouseEnter={[Function]}
          >
            item 1
          </div>
          <div
            active={true}
            onMouseEnter={[Function]}
          >
            item 2
          </div>
        </div>,
      ],
      "className": "dropdown undefined",
      "onClick": [Function],
      "onMouseEnter": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "",
          "className": "",
          "direction": "bottom",
          "disabledClassName": "",
          "iconClassName": "",
          "isDisabled": false,
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              active={false}
              onMouseEnter={[Function]}
            >
              item 1
            </div>,
            <div
              active={true}
              onMouseEnter={[Function]}
            >
              item 2
            </div>,
          ],
          "className": "dropdown_items dropdown_items_bottom",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": ".0",
            "nodeType": "host",
            "props": Object {
              "active": false,
              "children": "item 1",
              "onMouseEnter": [Function],
            },
            "ref": null,
            "rendered": "item 1",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": ".1",
            "nodeType": "host",
            "props": Object {
              "active": true,
              "children": "item 2",
              "onMouseEnter": [Function],
            },
            "ref": null,
            "rendered": "item 2",
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <DropdownTitle
            className=""
            direction="bottom"
            disabledClassName=""
            iconClassName=""
            isDisabled={false}
          >
            
          </DropdownTitle>,
          <div
            className="dropdown_items dropdown_items_bottom"
          >
            <div
              active={false}
              onMouseEnter={[Function]}
            >
              item 1
            </div>
            <div
              active={true}
              onMouseEnter={[Function]}
            >
              item 2
            </div>
          </div>,
        ],
        "className": "dropdown undefined",
        "onClick": [Function],
        "onMouseEnter": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "",
            "className": "",
            "direction": "bottom",
            "disabledClassName": "",
            "iconClassName": "",
            "isDisabled": false,
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                active={false}
                onMouseEnter={[Function]}
              >
                item 1
              </div>,
              <div
                active={true}
                onMouseEnter={[Function]}
              >
                item 2
              </div>,
            ],
            "className": "dropdown_items dropdown_items_bottom",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": ".0",
              "nodeType": "host",
              "props": Object {
                "active": false,
                "children": "item 1",
                "onMouseEnter": [Function],
              },
              "ref": null,
              "rendered": "item 1",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": ".1",
              "nodeType": "host",
              "props": Object {
                "active": true,
                "children": "item 2",
                "onMouseEnter": [Function],
              },
              "ref": null,
              "rendered": "item 2",
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Dropdown component snapshot with children 1`] = `
<div
  className="dropdown"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    
    <svg
      className="icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 11l-3.009 3.004L9 11"
        fill="none"
        fillRule="evenodd"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown component snapshot with className 1`] = `
<div
  className="dropdown className"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    
    <svg
      className="icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 11l-3.009 3.004L9 11"
        fill="none"
        fillRule="evenodd"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown component snapshot with disabled 1`] = `
<div
  className="dropdown disabled"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    
    <svg
      className="icon disabled"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 11l-3.009 3.004L9 11"
        fill="none"
        fillRule="evenodd"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown component snapshot with disabledClassName 1`] = `
<div
  className="dropdown disabledClassName"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    
    <svg
      className="icon disabledClassName"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 11l-3.009 3.004L9 11"
        fill="none"
        fillRule="evenodd"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1"
      />
    </svg>
  </span>
</div>
`;

exports[`Dropdown component snapshot with label 1`] = `
<div
  className="dropdown"
  onClick={[Function]}
>
  <span
    className="dropdown_title"
  >
    menu1
    <svg
      className="icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 11l-3.009 3.004L9 11"
        fill="none"
        fillRule="evenodd"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1"
      />
    </svg>
  </span>
</div>
`;
